SSDM 0.1.9016 Weighted endemism index major change : range definition
              load_occ major beug fixed, wrong rows were removed
              tmppath change in ensemble and stack_modelling (overwrite of path var issue) @FD
              raster::readAll to force loading Env in memory (load_var) @FD
              Raster[Raster[]<=-900]=NA instead of reclassify @FD
              Resample with more condition to avoid extra computing @FD
              Add timestampt to ensemble_modelling @FD
SSDM 0.1.9015 n.cores parameter in GBM auto-adapted to parallel computing in stack_modelling
              gc() added at the end of each modelling function to avoid memory loss
              ensemble.AlgoSDM() weight corrected
              .cran-comment in .Rbuildignore
              shinyFiles in Suggests and checked when gui() is used
              Check with 0 Notes 0 Warnings 0 Errors
SSDM 0.1.9014 Parallel computing with parallel::parLapply
              .csv in save_model @DJ
              Species in ./Species in save_stack @DJ
              Stack results in ./Stack in save_stack @DJ
              Pearson cor = NA or NULL in evaluate.axis
SSDM 0.1.9013 Parallel computing: for loop correctly removed
              load_var tested
SSDM 0.1.9012 Parallel computing for stack_modelling with parallel::mclapply
SSDM 0.1.9011 load_var format and reso + extent bugged fixed @Dimitri_Justeau
SSDM 0.1.9010 uncertainties stack bug catch in try
              load_var with only folder path debug @Dimitri_Justeau
              load_var parameter: factors -> categorical @Dimitri_Justeau
              Presence / absence occurrences modelling @Robin_Pouteau
SSDM 0.1.9009 Stacking Algo. Corr. row names duplicate (strsplit)
              Duplicated '.tif' in load_occ doc @Dimitri_Justeau
              Null supported by Spcol (default) in .checkargs @Dimitri_Justeau
SSDM 0.1.9008 Windows gui data input fix (default switch)