@@ -1,3 +1,5 @@
+SSDM 0.1.9017 tmppath in ensemble_modelling dir creation @Jay
+              tmp doc in ensemble_ and stack_modelling @FD
 SSDM 0.1.9016 Weighted endemism index major change : range definition
               load_occ major beug fixed, wrong rows were removed
               tmppath change in ensemble and stack_modelling (overwrite of path var issue) @FD
